test/tests/operators/cron/bytes_output.txt
error: pipeline must return events
 --> tests/operators/cron/bytes_output.tql:5:21
  |
5 | cron "* * * * * *", {
  |                     ^ 
  |
